# usgscsm

./: .appveyor  .appveyor.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  code.json  doc_environment.yml  environment.yml  gitlab-ci.yml  package.json  setup.py
.github/: pull_request_template.md
.github/workflows/: aws_doc_deploy.yml  build-wasm.yml  ci_testing.yml  doc_build.yml  publish-npm.yml  publish-wasm.yml
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters  usgscsm.sln  usgscsm.vcxproj  usgscsm.vcxproj.filters
build2/Release/: gtest.lib  usgscsm.exp  usgscsm.lib
build2/csm/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  csmapi.sln  csmapi.vcxproj  csmapi.vcxproj.filters
build2/csm/Release/: csmapi.exp  csmapi.lib
build2/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  runCSMCameraModelTests.vcxproj  runCSMCameraModelTests.vcxproj.filters  runCSMCameraModelTests[1]_include.cmake
cmake/: gtest.cmake  nlohmann_jsonTargets.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py
docs/source/: conf.py  index.rst
docs/source/_static/: common.css  custom.css  usgsbanner.js  uswds_header.css
docs/source/_templates/: layout.html  usgsfooter.html  usgsheader.html
docs/source/sensors/: Apollo.rst  Cassini.rst  Chandrayaan.rst  Clementine.rst  Clipper.rst  Dawn.rst  Galileo.rst  Hayabusa.rst  Hayabusa2.rst  Juno.rst  Kaguya.rst  LunarOrbiter.rst  LunarReconnaissanceOrbiter.rst  Mariner10.rst  MarsExpress.rst  MarsGlobalSurveyor.rst  MarsReconnaissanceOrbiter.rst  MarsScienceLaboritory.rst  Messenger.rst  Near.rst  NewHorizons.rst  Odyssey.rst  OsirisRex.rst  Rosetta.rst  Selene.rst  TraceGasOrbiter.rst  Viking.rst  Voyager.rst  index.rst
docs/source/tools/: usgscsm_cam_test.rst
docs/source/user/: creating_an_environment.rst  isd_generation.rst
include/genericframe/: UsgsAstroFramePlugin.h
include/genericls/: UsgsAstroLsISD.h  UsgsAstroLsPlugin.h  UsgsAstroLsSensorModel.h  UsgsAstroLsStateData.h
include/json/: isd.json  isd_notes.json
include/mdis/: MdisNacSensorModel.h  MdisPlugin.h
include/nlohmann/: LICENSE.MIT
include/orex/: ORexPlugin.h  ORexSensorModel.h
include/usgscsm/: Distortion.h  EigenUtilities.h  Logging.h  UsgsAstroFramePlugin.h  UsgsAstroFrameSensorModel.h  UsgsAstroLsISD.h  UsgsAstroLsPlugin.h  UsgsAstroLsSensorModel.h  UsgsAstroLsStateData.h  UsgsAstroPlugin.h  UsgsAstroPluginSupport.h  UsgsAstroProjectedLsSensorModel.h  UsgsAstroProjectedSensorModel.h  UsgsAstroPushFrameSensorModel.h  UsgsAstroSarSensorModel.h  Utilities.h  VariantMap.h  usgscsm_logger.h
jupyter_notebooks/: CameraTesting_img2ground_distortion_v1.ipynb  Generate_Nadir_pointing.ipynb  OrbitalLsGeneration.ipynb  OrbitalPushFrameGeneration.ipynb  OrbitalSarGeneration.ipynb  Untitled.ipynb  UsgsAstroFrameSensorModelTesting.ipynb
recipe/: README.md  bld.bat  build.sh  meta.yaml
schemas/: isd.json
src/: CMakeLists.txt  Distortion.cpp  EigenUtilities.cpp  MdisPlugin.cpp  MdisSensorModel.cpp  ORexPlugin.cpp  ORexSensorModel.cpp  UsgsAstroFramePlugin.cpp  UsgsAstroFrameSensorModel.cpp  UsgsAstroLsPlugin.cpp  UsgsAstroLsSensorModel.cpp  UsgsAstroLsStateData.cpp  UsgsAstroPlugin.cpp  UsgsAstroPluginSupport.cpp  UsgsAstroProjectedLsSensorModel.cpp  UsgsAstroProjectedSensorModel.cpp  UsgsAstroPushFrameSensorModel.cpp  UsgsAstroSarSensorModel.cpp  Utilities.cpp  VariantMap.cpp
src/objs/: CMakeLists.txt  MdisNacSensorModel.cpp  MdisPlugin.cpp
src/wasm/: usgscsm.d.ts  usgscsm_bindings.cpp
tests/: CMakeGTEST.txt.in  CMakeLists.txt  CW1071364100B_IU_5.json  DistortionTests.cpp  EN1007907102M.json  EigenUtilitiesTests.cpp  Fixtures.h  FrameCameraTests.cpp  FramePluginTests.cpp  ISDParsingTests.cpp  J03_046060_1986_XN_18N282W_8bit_keywords.lis  J03_046060_1986_XN_18N282W_8bit_keywords.state  J03_046060_1986_XN_18N282W_8bit_state.json  JsonToISDTests.cpp  LineScanCameraTests.cpp  LineScanPluginTests.cpp  LineScanSensorModelTests.cpp  LineScanTests.cpp  LoggerTests.cpp  LoggingTests.cpp  MdisNacSensorModelTest.cpp  MdisNacSensorModelTest.h  MdisPluginTest.cpp  MdisWacSensorModelTest.cpp  MdisWacSensorModelTest.h  PluginTests.cpp  ProjectedCameraTests.cpp  PushFrameCameraTests.cpp  SarTests.cpp  TestMain.cpp  TestyMcTestFace.cpp  UtilitiesTests.cpp  cassini_nac.json  conftest.py  gxp_model_state.json  h0232_0000_nd2_keywords.lis  h0232_0000_nd2_state.json  h0232_0000_s12_keywords.lis  h0232_0000_s12_state.json  h0232_0000_s22_keywords.lis  (+16 more)
tests/data/: ESP_037330_1990_REDmos_hijitreged.preTriang.sup  ESP_037330_1990_REDmos_hijitreged_ale.json  ESP_037330_1990_REDmos_hijitreged_postTriang.sup  M1121188383LE.json  M1121202582LE.json  constAngularVelocityLineScan.json  constVelocityLineScan.json  constVelocityProj.json  ctxLineScan.json  dawnfc_radtan.json  flippedOrbitalLineScan.json  gxp_model_file.sup  gxp_proj_model_file.sup  isisComparisonSar.json  jitterFramer.json  lroWacPushFrame.json  marsLineScanProj.json  orbitalFramer.json  orbitalLineScan.json  orbitalPushFrame.json  orbitalSar.json  realTestSar.json  rectJ03_045994_1986_XN_18N282W_v6_8bit_keywords.json  simpleFramerISD.json  toughLroNacLineScan.json
tests/wasm/: test_wasm.js  test_wasm_basic.html
usgscam/: __init__.py  genericframe.pxd  genericframe.pyx  genericls.pxd  genericls.pyx  mdis.pxd  mdis.pyx  mdis_backup.pyx  orex.pxd  orex.pyx
(+42 files in other folders)
